# vvv18-demo-team-blue

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vino-blue.thrift
app/: CMakeLists.txt
app/conf/: config.ini
module/: CMakeLists.txt
src/: main.cpp  vino-blue.xml
src/app/: CMakeLists.txt
src/app/conf/: config.ini
src/app/scripts/: app-vino-blue.xml  find-wally.xml
src/module/: CMakeLists.txt
src/module/NLP-Module/: CMakeLists.txt  main.cpp
src/module/NLP-Module/app/scripts/: app-vino-blue.xml
src/module/NLP-Module/src/: main.cpp
src/module/Vision/: CMakeLists.txt
src/module/Vision/objectRecognizer/app/conf/: deploy_MemoryData_caffenet.prototxt  objectRecognizer.ini
src/module/Vision/objectRecognizer/src/: main.cpp
src/module/Vision/vision-focus/: CMakeLists.txt  PITCHME.md  README.md  closest-blob.thrift  closest-blob.xml  main.cpp
src/module/Vision/vision-focus/app/conf/: config.ini  histogram_file1.yml  histogram_file2.yml  histogram_file3.yml  histogram_file4.yml  histogram_file5.yml
src/module/Vision/vision-recognition/: .gitignore  CMakeLists.txt  README.md
src/module/behaviors/: CMakeLists.txt  README.md
src/module/behaviors/app/scripts/: behaviors-app-icub.xml  behaviors-app-icubSim.xml  behaviors-system.xml
src/module/behaviors/src/: helpers.cpp  helpers.h  main.cpp
src/module/invKin/: CMakeLists.txt
src/module/invKin/src/: position.cpp
src/module/invKin/src/temp/: position.cpp
src/module/wrenchEstimator/: CMakeLists.txt
src/module/wrenchEstimator/src/: WrenchEstimator.cpp  WrenchEstimator.h  main.cpp
(+7 files in other folders)
